--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: angolini
 github_username:  angolini
+google_analytics: UA-204384453-1
 
 # Build settings
 markdown: kramdown
